# zLLM

./: manage.py  pyproject.toml
api/: admin.py  models.py  views.py
api/migrations/: 0001_initial.py  0002_alter_apikey_key.py  0003_remove_apikey_token_limit_duration_and_more.py  0004_rename_token_limit_reset_days_apikey_tokens_usage_reset_duration_days.py  0005_apikey_tokens_usage_reset_at.py
api/providers/: __init__.py  groq_provider.py  ollama_provider.py  provider.py
zLLM/: asgi.py  settings.py  urls.py  wsgi.py
